fix: update color variables for danger and warning in bootstrap styles feat: enhance OrderDetailsPage with StatusButton for order status interaction refactor: improve OrderItemsTable layout and styling for better readability

--- a/sass/_bootstrap.scss
+++ b/sass/_bootstrap.scss
@@ -4,8 +4,8 @@ $line-height-base: 1.4;
 $navbar-dark-color: #fcf1e7 !default;
 $navbar-dark-hover-color: #e0ad05 !default;
 $navbar-dark-active-color: #bb681a !default;
-$danger: #F14454;
-$warning: #F4D15E;
+$danger: #e94757;
+$warning: #C4B44B;
 $success: #10B981;
 $primary: #18110f;
 $secondary: #fff5eb;
